--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -8,7 +8,7 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="index.css" type="text/css"/>
+    <link rel="stylesheet" href="index.css" type="text/css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -125,6 +125,14 @@
             <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col col-sm-6 col-md-12 col-lg-12">Column1</div>
+        <div class="col col-sm-3 col-md-6 col-lg-12">Column2</div>
+        <div class="col col-sm-3 col-md-6 col-lg-12">Column xtra</div>
       </div>
     </div>
 
