--- a/bootstrap/landing-page/index.html
+++ b/bootstrap/landing-page/index.html
@@ -23,11 +23,23 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1 class="text-uppercase" ><strong>The biggest startup event of the year</strong></h1>
-    <hr>
-    <button class="btn btn-primary btn-xl text-uppercase">Find out more</button>
+    <div class="container d-flex align-items-center h-100">
+      <div class="row">
+        <header>
+          <h1 class="text-uppercase">
+            <strong>The biggest startup event of the year</strong>
+          </h1>
+        </header>
+        <div class="buffer"></div>
+        <section class="text-center col-12">
 
-    <!-- button in html -->
-
+          <hr>
+          <button class="btn btn-primary btn-xl text-uppercase">
+            Find out more
+          </button>
+        </section>
+        <!-- button in html -->
+      </div>
+    </div>
   </body>
 </html>
