Animate.css not working

--- a/animate-css/index.html
+++ b/animate-css/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" type="text/css" href="index.css"/>
     </head>
     <body class="test">
-        <h1 class="animated infinite flip">Animate me</h1>
+        <h1 class="animated infinite flip">Animate me (Animate.css)</h1>
     </body>
 </html>
