learned styling and innerHTML

--- a/js/selectors.html
+++ b/js/selectors.html
@@ -17,5 +17,8 @@
             <li>Birtday cake</li>
             <li>Candles</li>
         </ul>
+        <script>
+            document.getElementById("first");
+        </script>
     </body>
 </html>
