added eventListener onClick

--- a/js/selectors.html
+++ b/js/selectors.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>Selectors in JS</title>
-        <script type="text/javascript" src="selectors.js">
-                    </script>
+        <!-- <script type="text/javascript" src="selectors.js">
+                    </script> -->
+                   
     </head>
     <body>
         <h1>Shopping List</h1>
@@ -17,8 +18,7 @@
             <li>Birtday cake</li>
             <li>Candles</li>
         </ul>
-        <script>
-            document.getElementById("first");
-        </script>
+     <button>Click me</button>
+     <script type="text/javascript" src="events.js"></script>
     </body>
 </html>
