--- a/js/selectors.html
+++ b/js/selectors.html
@@ -9,6 +9,8 @@
     <body>
         <h1>Shopping List</h1>
         <p id="first">Get it done today</p>
+        <input id="userinput" type="text" placeholder="Enter text"/>
+        <button id="enter">Enter</button>
         <p class="second">No excuses</p>
         <ul>
             <li random="23">Notebook</li>
