Added delete button

--- a/js/selectors.html
+++ b/js/selectors.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Selectors in JS</title>
-        <!-- <script type="text/javascript" src="selectors.js">
+  <head>
+    <title>Selectors in JS</title>
+    <!-- <script type="text/javascript" src="selectors.js">
                     </script> -->
-                   
-    </head>
-    <body>
-        <h1>Shopping List</h1>
-        <p id="first">Get it done today</p>
-        <input id="userinput" type="text" placeholder="Enter text"/>
-        <button id="enter">Enter</button>
-        <p class="second">No excuses</p>
-        <ul>
-            <li random="23">Notebook</li>
-            <li>Jello</li>
-            <li>Spinach</li>
-            <li>Rice</li>
-            <li>Birtday cake</li>
-            <li>Candles</li>
-        </ul>
-     <button>Click me</button>
-     <script type="text/javascript" src="events.js"></script>
-    </body>
+  </head>
+  <body>
+    <h1>Shopping List</h1>
+    <p id="first">Get it done today</p>
+    <input id="userinput" type="text" placeholder="Enter text" />
+    <button id="enter">Enter</button>
+    <p class="second">No excuses</p>
+    <ul class="myList">
+      <li random="23">Notebook<button class="delete">Delete</button></li>
+      <li>Jello<button class="delete">Delete</button></li>
+      <li>Spinach<button class="delete">Delete</button></li>
+      <li>Rice<button class="delete">Delete</button></li>
+      <li>Birtday cake<button class="delete">Delete</button></li>
+      <li>Candles<button class="delete">Delete</button></li>
+    </ul>
+    <button>Click me</button>
+    <script type="text/javascript" src="events.js"></script>
+  </body>
 </html>
