--- a/js/selectors.html
+++ b/js/selectors.html
@@ -12,7 +12,9 @@
     <button id="enter">Enter</button>
     <p class="second">No excuses</p>
     <ul class="myList">
-      <li random="23">Notebook<button class="delete">Delete</button></li>
+      <li random="23">Notebook
+        <button class="delete">Delete</button>
+      </li>
       <li>Jello<button class="delete">Delete</button></li>
       <li>Spinach<button class="delete">Delete</button></li>
       <li>Rice<button class="delete">Delete</button></li>
