added delete operation

--- a/js/create_delete_operations.html
+++ b/js/create_delete_operations.html
@@ -5,14 +5,14 @@
   </head>
   <body>
     <div>
-        <h4>Tech Stack to Learn</h4>
-        <input type="text" id="userinput" placeholder="I want to learn">
-        <button id="enter">Add</button>
-        <ul>
-            <li class="li">HTML</li>
-            <li class="li">CSS</li>
-            <li class="li">Javascript</li>
-        </ul>
+      <h4>Tech Stack to Learn</h4>
+      <input type="text" id="userinput" placeholder="I want to learn" />
+      <button id="enter">Add</button>
+      <ul>
+        <li class="li">HTML <button class="delete">Delete</button></li>
+        <li class="li">CSS <button class="delete">Delete</button></li>
+        <li class="li">Javascript <button class="delete">Delete</button></li>
+      </ul>
     </div>
     <script src="cd.js"></script>
   </body>
