--- a/js/backroundGenerator.html
+++ b/js/backroundGenerator.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head><title>Backround Generator</title></head>
-    <body>
-        <h3>Backround Generator</h3>
+    <body id="gradient">
+        <h1>Backround Generator</h1>
+        <input class="color1" type="color" value="#00ff00" name="color1">
+        <input class="color2" type="color" value="#ffff00" name="color2">
+        <h2>Current CSS Background</h2>
+        <h3></h3>
+        <script src="bg.js" type="text/javascript"></script>
     </body>
 </html>
