--- a/js/backroundGenerator.html
+++ b/js/backroundGenerator.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Backround Generator</title></head>
-    <body id="gradient">
+    <head>
+        <title>Backround Generator</title>
+        <link rel="stylesheet" href="backgroundgen.css" type="text/css">
+    </head>
+    <body>
         <h1>Backround Generator</h1>
         <input class="color1" type="color" value="#00ff00" name="color1">
         <input class="color2" type="color" value="#ffff00" name="color2">
